--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 			<version>2.6.1</version>
 		</dependency>
 
+		<!-- H2 DB -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 
 	</dependencies>
 
