--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#profile
 spring.profiles.active=localh2
+#db
+spring.jpa.hibernate.batch_size=100
+spring.jpa.hibernate.order_inserts=true
+spring.jpa.hibernate.order_updates=true
+spring.jpa.hibernate.naming.implicit-strategy:org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical_strategy:org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.default_schema=ex
+spring.jpa.properties.hibernate.default_schema=ex
+spring.jpa.show-sql=true
