--- a/src/main/resources/application-localh2.properties
+++ b/src/main/resources/application-localh2.properties
@@ -8,3 +8,11 @@ spring.h2.console.enabled=test
 #liquibase
 liquibase.enabled=false
 #logging.level.=DEBUG
+
+# Embedded Spring LDAP
+spring.ldap.embedded.base-dn= dc=memorynotfound,dc=com
+spring.ldap.embedded.credential.username= uid=admin
+spring.ldap.embedded.credential.password= secret
+spring.ldap.embedded.ldif=classpath:data-ldap.ldif
+spring.ldap.embedded.port= 12345
+spring.ldap.embedded.validation.enabled=false
