Added configuration spring security

--- a/src/main/resources/application-localh2.properties
+++ b/src/main/resources/application-localh2.properties
@@ -10,9 +10,9 @@ liquibase.enabled=false
 #logging.level.=DEBUG
 
 # Embedded Spring LDAP
-spring.ldap.embedded.base-dn= dc=memorynotfound,dc=com
+spring.ldap.embedded.base-dn= dc=exampleapp,dc=com
 spring.ldap.embedded.credential.username= uid=admin
 spring.ldap.embedded.credential.password= secret
 spring.ldap.embedded.ldif=classpath:data-ldap.ldif
-spring.ldap.embedded.port= 12345
+spring.ldap.embedded.port= 1234
 spring.ldap.embedded.validation.enabled=false
