--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,21 @@
             <artifactId>unboundid-ldapsdk</artifactId>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-ldap</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<!--Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
