--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,16 @@
 			<version>2.0.9.RELEASE</version>
 		</dependency>
 
+		<!-- WSDL -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
