--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.naming.physical_strategy:org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.default_schema=ex
 spring.jpa.properties.hibernate.default_schema=ex
 spring.jpa.show-sql=true
+server.port=8082
