--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,17 @@
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
 
+		<!-- ACTIVEMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
