--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.default_schema=ex
 spring.jpa.properties.hibernate.default_schema=ex
 spring.jpa.show-sql=true
 server.port=8082
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
